5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1832_1648.log
== TEST (2019-06-13 19:13:26) 
-- CODE:
from numpy import*
aluno=array(eval(input("digite o numero:")))
a=0
for i in aluno:
	if(i<=(70/100)):
		a=a+1
print(a)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:14:18) 
-- CODE:
from numpy import*
aluno=array(eval(input("digite o numero:")))
a=0
for i in aluno:
	if(i<=(70/100)):
		a=a+1
print(i)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:21:00) 
-- CODE:
from numpy import*
aluno=array(eval(input("digite o numero:")))
a=0
b=0
for i in aluno:
	if(i<(70/100)):
		a=a+1
for j in aluno:
	if(j<*aluno/(70/100)):
d=zeros(5,dtype=int)
d[0]=a
d[1]=b
print(d)

		
-- ERROR:
File "XXXX", line 9
    if(j<*aluno/(70/100)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:21:50) 
-- CODE:
from numpy import*
aluno=array(eval(input("digite o numero:")))
a=0
b=0
for i in aluno:
	if(i<(70/100)):
		a=a+1
for j in aluno:
	if(j < aluno*(70/100)):
d=zeros(5,dtype=int)
d[0]=a
d[1]=b
print(d)

		
-- ERROR:
File "XXXX", line 10
    d=zeros(5,dtype=int)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:22:11) 
-- CODE:
from numpy import*
aluno=array(eval(input("digite o numero:")))
a=0
b=0
for i in aluno:
	if(i<(70/100)):
		a=a+1
for j in aluno:
	if(j < aluno*(70/100)):
d=zeros(2,dtype=int)
d[0]=a
d[1]=b
print(d)

		
-- ERROR:
File "XXXX", line 10
    d=zeros(2,dtype=int)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:22:39) 
-- CODE:
from numpy import*
aluno=array(eval(input("digite o numero:")))
a=0
b=0
for i in aluno:
	if(i<(70/100)):
		a=a+1
for j in aluno:
	if(j < aluno*(70/100)):
		b=b+1
d=zeros(2,dtype=int)
d[0]=a
d[1]=b
print(d)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:25:06) 
-- CODE:
from numpy import*
aluno=array(eval(input("digite o numero:")))
a=0
b=0
for i in aluno:
	if(i<aluno*(70/100)):
		a=a+1
for j in aluno:
	if(j == i):
		b=b+1
d=zeros(2,dtype=int)
d[0]=a
d[1]=b
print(d)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:27:16) 
-- CODE:
from numpy import*
aluno=array(eval(input("digite o numero:")))
a=0
b=0
for i in aluno:
	if(i<aluno*(70/100)):
		a=a+1
for j in aluno:
	if(j == i):
		b=b+1
d=zeros(2,dtype=int)
d[0]=a
d[1]=b
print(d)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:28:54) 
-- CODE:
from numpy import*
aluno=array(eval(input("digite o numero:")))
a=0
b=0
for i in aluno:
	if(i<70):
		a=a+1
for j in aluno:
	if(j == i):
		b=b+1
d=zeros(2,dtype=int)
d[0]=a
d[1]=b
print(d)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:34:20) 
-- CODE:
from numpy import*
aluno=array(eval(input("digite o numero:")))
a=0
b=0
for i in aluno:
	if(i<70):
		a=a+1
q=zeros(a,dtype=int)
c=0
for j in aluno:
	if(j<70):
		q[b]=c
		b=b+1
	c=c+1
print(a)
print(q)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:34:42) 
-- CODE:
from numpy import*
aluno=array(eval(input("digite o numero:")))
a=0
b=0
for i in aluno:
	if(i<70):
		a=a+1
q=zeros(a,dtype=int)
c=0
for j in aluno:
	if(j<70):
		q[b]=c
		b=b+1
	c=c+1
print(a)
print(q)

		
-- EXECUTION TIME:
1.03113
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 4]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[1 2 5]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[1 2]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
